--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/EdgelessPE/what-did-ventoy-do/issues"
   },
-  "homepage": "https://github.com/EdgelessPE/what-did-ventoy-do#readme"
+  "homepage": "https://github.com/EdgelessPE/what-did-ventoy-do#readme",
+  "dependencies": {
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
+  }
 }
