--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/EdgelessPE/what-did-ventoy-do#readme",
   "dependencies": {
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "@types/node": "^15.0.1"
   },
   "devDependencies": {
     "@types/node": "^15.3.1"
