--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "ts-node test.ts"
+    "test": "ts-node test.ts",
+    "compile": "tsc what-did-ventoy-do.ts"
   },
   "repository": {
     "type": "git",
